--- a/style.less
+++ b/style.less
@@ -64,7 +64,7 @@ body {
 
 #contents {
   // constant
-  @width: 1000px;
+  @width: 100%;
   
   width: @width;
   min-height: 600px;
@@ -75,8 +75,13 @@ body {
   
   #main {
     float:left;
-    width: 800px;
+    width: 100%;
     padding: 10px 20px;
+    margin-right: -200px;
+    
+    .inner {
+      margin-right: 200px;
+    }
   }
   
   #side {
